Fix number display alignment

--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ input {
     gap: 16px;
     margin: 16px;
     text-align: center;
+    border-style: dashed;
+    background-color: #ededed;
 }
 
 .calculator {
@@ -66,9 +68,17 @@ input {
     display: flex;
 }
 
+.display-background {
+    background-color: #3366cc;
+}
+
 .row {
     display: flex;
     justify-content: center;
+}
+
+.history {
+    margin: 8px;
 }
 
 .header {
@@ -80,16 +90,18 @@ input {
 }
 
 #number-display {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
     width: 100%;
     height: 32px;
-    padding-right: 8px;
-    padding-left: 8px;
-    margin-left: 8px;
-    margin-right: 8px;
+    padding: 8px;
+    margin-left: 16px;
+    margin-right: 16px;
     background-color: #ededed;
     border-style: ridge;
     border-width: 2px;
-    text-align: right;
+    border-color: #666666;
 }
 
 #backspace {
